--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Modules\UsersModule\Commands\NewFolder\" />
     <Folder Include="Modules\UsersModule\qjueries\" />
   </ItemGroup>
 
